--- a/modules/claims_api/app/swagger/claims_api/description/v2.md
+++ b/modules/claims_api/app/swagger/claims_api/description/v2.md
@@ -12,7 +12,7 @@ Additional functionality will be added over time.
 You should use the [Benefits Claims API Version 1](https://developer.va.gov/explore/benefits/docs/claims?version=current) if: 
 
 -   You are a consumer outside of VA and do not have the necessary VA agreements to use this API, and/or
--   (POA) You want automatic establishment of power of attorney (21-22 or 21-22a)
+-   You want automatic establishment of power of attorney (21-22 or 21-22a)
     
 ## Technical Overview
 
