Documentation updates, add generated swagger

--- a/modules/claims_api/app/swagger/claims_api/description/v2.md
+++ b/modules/claims_api/app/swagger/claims_api/description/v2.md
@@ -24,7 +24,7 @@ End-to-end claims tracking provides the status of claims as they move through th
 
 Claims are first submitted by this API and then established in Veterans Benefits Management System (VBMS). A 200 response means that the claim was successfully submitted by the API. It does not mean VA has received the claim. Use the appropriate GET endpoint and the ID returned with your submission response to confirm the status of the submission. Statuses are:
 
--   Pending - the claim is successfully submitted to Lighthouse
+-   Pending - the claim is successfully submitted for processing
 -   Errored -  the submission encountered upstream errors
 -   Canceled -  the claim was identified as a duplicate or another issue caused the claim to be canceled. For duplicate claims,  the tracking of the claim's progress happens under a different Claim ID . 
 
