--- a/modules/ask_va_api/config/locales/get_inquiries_mock_data.json
+++ b/modules/ask_va_api/config/locales/get_inquiries_mock_data.json
@@ -1,47 +1,125 @@
-{ "data": [
+{
+  "data": [
     {
-      "respond_reply_id": "Original Question",
+      "icn": "1008709396V637156",
+      "id": "1",
       "inquiryNumber": "A-1",
-      "inquiryTopic": "Topic",
-      "inquiryProcessingStatus": "Close",
-      "lastUpdate": "08/07/23",
-      "submitterQuestions": "When is Sergeant Joe Smith birthday?",
-      "attachments": [
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "What is my status?",
+      "lastUpdate": "12/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "Status of a pending claim",
+      "inquiryLevelOfAuthentication": "Personal",
+      "attachmentNames": [
         {
-        "activity": "activity_1",
-        "date_sent": "08/7/23"
+          "id": "1",
+          "name": "testfile.txt"
         }
-      ],
-      "icn": "1008709396V637156"
+      ]
     },
     {
-      "respond_reply_id": "R-1",
+      "icn": "1008709396V637156",
+      "id": "2",
       "inquiryNumber": "A-2",
-      "inquiryTopic": "Topic",
-      "submitterQuestions": "How long was Sergeant Joe Smith overseas for?",
-      "inquiryProcessingStatus": "In Progress",
-      "lastUpdate": "08/07/23",
-      "attachments": [
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "How do I update my address?",
+      "lastUpdate": "1/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Personal",
+      "attachmentNames": [
         {
-        "activity": "activity_2",
-        "date_sent": "08/7/23"
+          "id": "2",
+          "name": "testfile.txt"
         }
-      ],
-      "icn": "1008709396V637156"
+      ]
     },
     {
+      "icn": "1008709396V637156",
+      "id": "3",
       "inquiryNumber": "A-3",
-      "inquiryTopic": "Topic",
-      "submitterQuestions": "Where was LT Bard Simpson stationed at in 1992?",
-      "inquiryProcessingStatus": "In Progress",
-      "lastUpdate": "08/07/23",
-      "attachments": [
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "How do I change my caretaker?",
+      "lastUpdate": "2/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Personal",
+      "attachmentNames": [
         {
-        "activity": "activity_2",
-        "date_sent": "08/7/23"
+          "id": "3",
+          "name": "testfile.txt"
         }
-      ],
-      "icn": "0001741122"
+      ]
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "4",
+      "inquiryNumber": "A-4",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "What is compensation?",
+      "lastUpdate": "3/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Personal",
+      "attachmentNames": [
+        {
+          "id": "4",
+          "name": "testfile.txt"
+        }
+      ]
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "5",
+      "inquiryNumber": "A-5",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "How do I find more information about my compensation?",
+      "lastUpdate": "4/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Personal",
+      "attachmentNames": [
+        {
+          "id": "5",
+          "name": "testfile.txt"
+        }
+      ]
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "6",
+      "inquiryNumber": "A-6",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "What is the status of my pending claim?",
+      "lastUpdate": "5/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Personal",
+      "attachmentNames": [
+        {
+          "id": "6",
+          "name": "testfile.txt"
+        }
+      ]
     }
+    
   ]
 }
