hydrated get_inquiries_mock_data

--- a/modules/ask_va_api/config/locales/get_inquiries_mock_data.json
+++ b/modules/ask_va_api/config/locales/get_inquiries_mock_data.json
@@ -119,7 +119,191 @@
           "name": "testfile.txt"
         }
       ]
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "7",
+      "inquiryNumber": "A-7",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "What is the status of my pending claim?",
+      "lastUpdate": "6/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": [
+        {
+          "id": "7",
+          "name": "testfile.txt"
+        }
+      ]
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "8",
+      "inquiryNumber": "A-8",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "What is the status of my claim?",
+      "lastUpdate": "7/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "9",
+      "inquiryNumber": "A-9",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "I am inquiring about the current status of my claim, specifically regarding its processing stage, any outstanding requirements, and the estimated timeline for completion. Could you please provide a detailed update?",
+      "lastUpdate": "8/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "10",
+      "inquiryNumber": "A-10",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "I am currently exploring options to increase my compensation and would greatly appreciate detailed guidance on the process. Could you please provide the necessary steps, required documentation, and any pertinent deadlines or criteria for eligibility?",
+      "lastUpdate": "9/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "11",
+      "inquiryNumber": "A-11",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "What is the process for vets to plan for the National Cemetery?",
+      "lastUpdate": "10/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "12",
+      "inquiryNumber": "A-12",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "Where can depends find more info on Burial Benefits?",
+      "lastUpdate": "10/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "13",
+      "inquiryNumber": "A-13",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "What is the process for a vet to transfer their benefits to their dependents?",
+      "lastUpdate": "10/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "14",
+      "inquiryNumber": "A-14",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "Where can I find more informoation on Education Debt?",
+      "lastUpdate": "10/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "15",
+      "inquiryNumber": "A-15",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "Where can I find more informoation on Education Debt?",
+      "lastUpdate": "11/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "16",
+      "inquiryNumber": "A-16",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "We have a major breakout! What do we do?",
+      "lastUpdate": "11/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "17",
+      "inquiryNumber": "A-17",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "We have a major breakout! What do we do?",
+      "lastUpdate": "11/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
+    },
+    {
+      "icn": "1008709396V637156",
+      "id": "17",
+      "inquiryNumber": "A-17",
+      "inquiryStatus": "In Progress",
+      "submitterQuestion": "Is it possible to do the 'wave' across America?",
+      "lastUpdate": "11/20/23",
+      "inquiryHasAttachments": true,
+      "inquiryHasBeenSplit": true,
+      "veteranRelationship": "self",
+      "schoolFacilityCode": "0123",
+      "inquiryTopic": "All other Questions",
+      "inquiryLevelOfAuthentication": "Business",
+      "attachmentNames": []
     }
-    
   ]
 }
