--- a/modules/claims_api/app/swagger/claims_api/description/v1.md
+++ b/modules/claims_api/app/swagger/claims_api/description/v1.md
@@ -31,12 +31,12 @@ There is no limit on the number of files a payload can contain, but size limits 
  - No single file in a payload can exceed 100 MB
 
 ### Authentication and authorization
-To make an API request, follow our [authentication process](https://developer.va.gov/explore/authorization?api=claims) to receive an [OAuth token](https://oauth.net/2/).
+To make an API request, follow our [authentication process](https://developer.va.gov/explore/api/benefits-claims/authorization-code) to receive an [OAuth token](https://oauth.net/2/).
 
 **Important:** To get production access using client credentials grant, you must either work for VA or have specific VA agreements in place. If you have questions, [contact us](https://developer.va.gov/support/contact-us).
 
 #### Representative authorization
-Representatives seeking authorization for a Veteran must first [authenticate](https://developer.va.gov/explore/authorization?api=claims) and then pass the Veteran’s information in the right header:
+Representatives seeking authorization for a Veteran must first [authenticate](https://developer.va.gov/explore/api/benefits-claims/authorization-code) and then pass the Veteran’s information in the right header:
  - SSN in X-VA-SSN
  - First name in X-VA-First-Name
  - Last name in X-VA-Last-Name
