Add line to OAS

--- a/modules/claims_api/app/swagger/claims_api/description/v2.md
+++ b/modules/claims_api/app/swagger/claims_api/description/v2.md
@@ -6,6 +6,7 @@ The Benefits Claims API Version 2 lets internal consumers:
 -   Automatically establish an Intent To File (21-0966) in VBMS
 -   Automatically establish a disability compensation claim (21-526EZ) in VBMS
 -   Digitally submit supporting documentation for disability compensation claims
+-   Retrieve the active Power of Attorney for a Veteran
 
 Additional functionality will be added over time.
 
