API-32864 Validate token ICN in HLR v0 GET requests

--- a/modules/appeals_api/config/locales/en.yml
+++ b/modules/appeals_api/config/locales/en.yml
@@ -2,20 +2,23 @@ en:
   appeals_api:
       errors:
         contact_info_presence: "At least one must be included: '/data/attributes/veteran'"
+        forbidden_parameter_icn: "Invalid 'icn' parameter: Veterans may access only their own records"
+        forbidden_token_icn: "Veterans may access only their own records"
         hearing_type_preference_inclusion: "If '/data/attributes/boardReviewOption' 'direct_review' or 'evidence_submission' is selected, '/data/attributes/hearingTypePreference' must not be selected"
         hearing_type_preference_missing: "If '/data/attributes/boardReviewOption' 'hearing' is selected, '/data/attributes/hearingTypePreference' must also be present"
+        invalid_schema_type: "The '%{schema_type}' request parameter is invalid"
+        mismatched_file_numbers: "Request header 'X-VA-File-Number' does not match the associated appeal's file number"
         mismatched_ssns: "Request header 'X-VA-SSN' does not match the associated appeal's SSN"
         mismatched_ssns_in_body: "The provided 'ssn' value does not match the associated appeal's SSN"
-        mismatched_file_numbers: "Request header 'X-VA-File-Number' does not match the associated appeal's file number"
-        nod_requesting_extension_must_be_true: "If '/data/attributes/extensionReason' present, then '/data/attributes/requestingExtension' must equal true"
-        nod_outside_legal_window: "This evidence submission is outside the 90 day legal window for submission."
-        sc_incorrect_claimant_type: "If '/data/attributes/claimant' field is supplied, 'data/attributes/claimantType' must not be 'veteran'"
-        sc_outside_submission_window: "This submission is outside of the 7-day window for evidence submission"
+        missing_icn_parameter: "The 'icn' parameter is required with this request"
         missing_uuid: 'Must supply a corresponding %{appeal_type} id in order to submit evidence'
         no_evidence_submission_accepted: "Corresponding Notice of Disagreement 'boardReviewOption' must be 'evidence_submission'"
+        nod_outside_legal_window: "This evidence submission is outside the 90 day legal window for submission."
+        nod_requesting_extension_must_be_true: "If '/data/attributes/extensionReason' present, then '/data/attributes/requestingExtension' must equal true"
         not_found: "%{type} with uuid %{id} not found"
         not_homeless_address_missing: "If not homeless, address must be provided: '/data/attributes/veteran/address'"
         pdf_download_expired: "PDF for %{type} with id %{id} cannot be downloaded because the form data was deleted from the server after the PII retention period expired"
         pdf_download_in_error: "PDF for %{type} with id %{id} cannot be downloaded because there was an error in the submission process"
         pdf_download_not_ready: "PDF for %{type} with id %{id} cannot be downloaded yet because the appeal is still being submitted"
-        invalid_schema_type: "The '%{schema_type}' request parameter is invalid"
+        sc_incorrect_claimant_type: "If '/data/attributes/claimant' field is supplied, 'data/attributes/claimantType' must not be 'veteran'"
+        sc_outside_submission_window: "This submission is outside of the 7-day window for evidence submission"
