--- a/modules/ask_va_api/config/locales/get_branchofservice_mock_data.json
+++ b/modules/ask_va_api/config/locales/get_branchofservice_mock_data.json
@@ -1,111 +1,111 @@
 {
-  "data": [
+  "Data": [
       {
-          "id": 722310000,
-          "name": "Air Force"
+          "Id": 722310000,
+          "Name": "Air Force"
       },
       {
-          "id": 722310002,
-          "name": "Air Force National Guard"
+          "Id": 722310002,
+          "Name": "Air Force National Guard"
       },
       {
-          "id": 722310003,
-          "name": "Air Force Nursing Corps (AFNC)"
+          "Id": 722310003,
+          "Name": "Air Force Nursing Corps (AFNC)"
       },
       {
-          "id": 722310001,
-          "name": "Air Force Reserves"
+          "Id": 722310001,
+          "Name": "Air Force Reserves"
       },
       {
-          "id": 722310005,
-          "name": "Army"
+          "Id": 722310005,
+          "Name": "Army"
       },
       {
-          "id": 722310007,
-          "name": "Army National Guard"
+          "Id": 722310007,
+          "Name": "Army National Guard"
       },
       {
-          "id": 722310006,
-          "name": "Army Reserves"
+          "Id": 722310006,
+          "Name": "Army Reserves"
       },
       {
-          "id": 722310015,
-          "name": "Coast Guard"
+          "Id": 722310015,
+          "Name": "Coast Guard"
       },
       {
-          "id": 722310016,
-          "name": "Coast Guard Women's Reserve (SPARS)"
+          "Id": 722310016,
+          "Name": "Coast Guard Women's Reserve (SPARS)"
       },
       {
-          "id": 722310019,
-          "name": "Environmental Services Administration"
+          "Id": 722310019,
+          "Name": "Environmental Services Administration"
       },
       {
-          "id": 722310010,
-          "name": "Marine Corps"
+          "Id": 722310010,
+          "Name": "Marine Corps"
       },
       {
-          "id": 722310011,
-          "name": "Marine Reserves"
+          "Id": 722310011,
+          "Name": "Marine Reserves"
       },
       {
-          "id": 722310020,
-          "name": "National Oceanic & Atmospheric Admin (NOAA)"
+          "Id": 722310020,
+          "Name": "National Oceanic & Atmospheric Admin (NOAA)"
       },
       {
-          "id": 722310012,
-          "name": "Navy"
+          "Id": 722310012,
+          "Name": "Navy"
       },
       {
-          "id": 722310014,
-          "name": "Navy Nursing Corps (NNC)"
+          "Id": 722310014,
+          "Name": "Navy Nursing Corps (NNC)"
       },
       {
-          "id": 722310013,
-          "name": "Navy Reserves"
+          "Id": 722310013,
+          "Name": "Navy Reserves"
       },
       {
-          "id": 722310022,
-          "name": "Philippines Guerilla"
+          "Id": 722310022,
+          "Name": "Philippines Guerilla"
       },
       {
-          "id": 722310023,
-          "name": "Philippines Scout"
+          "Id": 722310023,
+          "Name": "Philippines Scout"
       },
       {
-          "id": 722310018,
-          "name": "Public Health Service"
+          "Id": 722310018,
+          "Name": "Public Health Service"
       },
       {
-          "id": 722310025,
-          "name": "Space Force"
+          "Id": 722310025,
+          "Name": "Space Force"
       },
       {
-          "id": 722310021,
-          "name": "U.S. Merchant Marine"
+          "Id": 722310021,
+          "Name": "U.S. Merchant Marine"
       },
       {
-          "id": 722310004,
-          "name": "Women's Air Force Service Pilots (WASP)"
+          "Id": 722310004,
+          "Name": "Women's Air Force Service Pilots (WASP)"
       },
       {
-          "id": 722310008,
-          "name": "Women's Army Auxiliary Corps (WAAC)"
+          "Id": 722310008,
+          "Name": "Women's Army Auxiliary Corps (WAAC)"
       },
       {
-          "id": 722310009,
-          "name": "Women's Army Corps (WAC)"
+          "Id": 722310009,
+          "Name": "Women's Army Corps (WAC)"
       },
       {
-          "id": 722310017,
-          "name": "Women's Voluntary Emergency Service (WAVES)"
+          "Id": 722310017,
+          "Name": "Women's Voluntary Emergency Service (WAVES)"
       },
       {
-          "id": 722310024,
-          "name": "Unknown"
+          "Id": 722310024,
+          "Name": "Unknown"
       }
   ],
-  "message": "",
+  "Message": "",
   "ExceptionOccurred": false,
   "ExceptionMessage": "",
   "MessageId": "d0d4f082-9d6e-4d46-823d-67f6ba363bdb"
