--- a/modules/ask_va_api/config/locales/get_levelofauthentication_mock_data.json
+++ b/modules/ask_va_api/config/locales/get_levelofauthentication_mock_data.json
@@ -1,23 +1,23 @@
 {
-  "data": [
+  "Data": [
       {
-          "id": 722310002,
-          "name": "Authenticated"
+          "Id": 722310002,
+          "Name": "Authenticated"
       },
       {
-          "id": 722310000,
-          "name": "Unauthenticated"
+          "Id": 722310000,
+          "Name": "Unauthenticated"
       },
       {
-          "id": 722310001,
-          "name": "Personal"
+          "Id": 722310001,
+          "Name": "Personal"
       },
       {
-          "id": 722310003,
-          "name": "Business"
+          "Id": 722310003,
+          "Name": "Business"
       }
   ],
-  "message": "",
+  "Message": "",
   "ExceptionOccurred": false,
   "ExceptionMessage": "",
   "MessageId": "4633a0e7-6928-4a22-81f9-0775bb86673c"
