--- a/modules/ask_va_api/config/locales/get_province_mock_data.json
+++ b/modules/ask_va_api/config/locales/get_province_mock_data.json
@@ -1,47 +1,47 @@
 {
-  "data": [
+  "Data": [
       {
-          "id": 722310008,
-          "name": "Alberta"
+          "Id": 722310008,
+          "Name": "Alberta"
       },
       {
-          "id": 722310005,
-          "name": "British Columbia"
+          "Id": 722310005,
+          "Name": "British Columbia"
       },
       {
-          "id": 722310004,
-          "name": "Manitoba"
+          "Id": 722310004,
+          "Name": "Manitoba"
       },
       {
-          "id": 722310003,
-          "name": "New Brunswick"
+          "Id": 722310003,
+          "Name": "New Brunswick"
       },
       {
-          "id": 722310009,
-          "name": "Newfoundland"
+          "Id": 722310009,
+          "Name": "Newfoundland"
       },
       {
-          "id": 722310002,
-          "name": "Nova Scotia"
+          "Id": 722310002,
+          "Name": "Nova Scotia"
       },
       {
-          "id": 722310000,
-          "name": "Ontario"
+          "Id": 722310000,
+          "Name": "Ontario"
       },
       {
-          "id": 722310006,
-          "name": "Prince Edward Island"
+          "Id": 722310006,
+          "Name": "Prince Edward Island"
       },
       {
-          "id": 722310001,
-          "name": "Quebec"
+          "Id": 722310001,
+          "Name": "Quebec"
       },
       {
-          "id": 722310007,
-          "name": "Saskatchewan"
+          "Id": 722310007,
+          "Name": "Saskatchewan"
       }
   ],
-  "message": "",
+  "Message": "",
   "ExceptionOccurred": false,
   "ExceptionMessage": "",
   "MessageId": "9fc9d8fc-c71e-490b-b052-b049e9cda76b"
