--- a/modules/ask_va_api/config/locales/get_responsetype_mock_data.json
+++ b/modules/ask_va_api/config/locales/get_responsetype_mock_data.json
@@ -1,19 +1,19 @@
 {
-  "data": [
+  "Data": [
       {
-          "id": 722310000,
-          "name": "Email"
+          "Id": 722310000,
+          "Name": "Email"
       },
       {
-          "id": 722310001,
-          "name": "Phone"
+          "Id": 722310001,
+          "Name": "Phone"
       },
       {
-          "id": 722310002,
-          "name": "US Mail"
+          "Id": 722310002,
+          "Name": "US Mail"
       }
   ],
-  "message": "",
+  "Message": "",
   "ExceptionOccurred": false,
   "ExceptionMessage": "",
   "MessageId": "d9336ed5-a2f1-4aa3-a540-4fdbbdb2d1ec"
